--- a/Stambul_DB/Pages/Registration.xaml
+++ b/Stambul_DB/Pages/Registration.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Stambul_DB.Pages.Registration"
+﻿<Window x:Class="Stambul_DB.Pages.Registration"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -40,4 +40,4 @@
             </Button.Resources>
         </Button>
     </Grid>
-</Page>
+</Window>
