--- a/Stambul_DB/Pages/IstanbulDB.xaml
+++ b/Stambul_DB/Pages/IstanbulDB.xaml
@@ -9,28 +9,28 @@
       Title="IstanbulDB">
 
     <Grid>
-        <StackPanel HorizontalAlignment="Left" Height="1014" Margin="10,10,0,0" VerticalAlignment="Top" Width="307">
+        <StackPanel HorizontalAlignment="Left" Height="983" Margin="10,10,0,0" VerticalAlignment="Top" Width="307">
             <Expander x:Name="CityMaps" Header="City Maps" Foreground="#FFF0E7E7" FontSize="18">
                 <StackPanel>
                     <CheckBox x:Name="_1815_CM1" Foreground="#FFF7F2F2" Checked="_1815_CM1_IsChecked" Unchecked="_1815_CM1_Unchecked">1815 City Maps</CheckBox>
-                    <CheckBox x:Name="_1821_CM1" Foreground="#FFF7F2F2" Checked="_1821_CM1_Cheked" Unchecked="_1821_CM1_Unchecked">1821 City Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1853 City Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1860 City Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1882 City Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1913 City Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1918 City Maps</CheckBox>
+                    <CheckBox x:Name="_1821_CM1" Foreground="#FFF7F2F2" Checked="_1821_CM1_IsCheked" Unchecked="_1821_CM1_Unchecked">1821 City Maps</CheckBox>
+                    <CheckBox x:Name="_1853_CM1" Foreground="#FFF7F2F2" Checked="_1853_CM1_IsCheked" Unchecked="_1853_CM1_Unchecked">1853 City Maps</CheckBox>
+                    <CheckBox x:Name="_1860_CM1" Foreground="#FFF7F2F2" Checked="_1860_CM1_IsCheked" Unchecked="_1860_CM1_Unchecked">1860 City Maps</CheckBox>
+                    <CheckBox x:Name="_1882_CM1" Foreground="#FFF7F2F2" Checked="_1882_CM1_IsCheked" Unchecked="_1882_CM1_Unchecked">1882 City Maps</CheckBox>
+                    <CheckBox x:Name="_1913_CM1" Foreground="#FFF7F2F2" Checked="_1913_CM1_IsCheked" Unchecked="_1913_CM1_Unchecked">1913 City Maps</CheckBox>
+                    <CheckBox x:Name="_1918_CM1" Foreground="#FFF7F2F2" Checked="_1918_CM1_IsCheked" Unchecked="_1918_CM1_Unchecked">1918 City Maps</CheckBox>
                 </StackPanel>
             </Expander>
             <Expander x:Name="RegionalMaps" Header="Regional Maps" Foreground="#FFF0E7E7" FontSize="18">
                 <StackPanel>
-                    <CheckBox Foreground="#FFF7F2F2">1899 Regional Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1900 Regional Maps</CheckBox>
+                    <CheckBox x:Name="_1899_RM1" Checked="_1899_RM1_IsCheked" Unchecked="_1899_RM1_Unchecked" Foreground="#FFF7F2F2">1899 Regional Maps</CheckBox>
+                    <CheckBox x:Name="_1900_RM1" Checked="_1900_RM1_IsCheked" Unchecked="_1900_RM1_Unchecked" Foreground="#FFF7F2F2">1900 Regional Maps</CheckBox>
                 </StackPanel>
             </Expander>
             <Expander x:Name="SpecialMaps" Header="Special Maps" Foreground="#FFF0E7E7" FontSize="18">
                 <StackPanel>
-                    <CheckBox Foreground="#FFF7F2F2">1875 Fire Maps</CheckBox>
-                    <CheckBox Foreground="#FFF7F2F2">1865 Cholera Outbreak Interactive Maps</CheckBox>
+                    <CheckBox x:Name="_1875_SM1" Checked="_1875_SM1_IsCheked" Unchecked="_1875_SM1_Unchecked" Foreground="#FFF7F2F2">1875 Fire Maps</CheckBox>
+                    <CheckBox x:Name="_1865_SM1" Checked="_1865_SM1_IsCheked" Unchecked="_1865_SM1_Unchecked" Foreground="#FFF7F2F2">1865 Cholera Outbreak Interactive Maps</CheckBox>
                 </StackPanel>
             </Expander>
             <Expander x:Name="PervetitichMaps" Header="Pervetitich Maps" Foreground="#FFF0E7E7" FontSize="18">
@@ -94,8 +94,16 @@
             <Button x:Name="Add" Content="Добавить" Margin="0,0,191,0" Height="39" Background="#FF24CB1C" Visibility="Hidden" Initialized="Add_initialaized"/>
             <Button x:Name="Delete" Content="Удалить" Margin="0,0,191,0" Height="39" Background="#FFE41124" Visibility="Hidden" Initialized="Delete_initialaized"/>
         </StackPanel>
-
         <Image x:Name="_1815_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1815_CM.jpg" Margin="317,0,106,153" Visibility="Hidden" />
-        <Image x:Name="_1821_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1821_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden" />
+            <Image x:Name="_1821_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1821_CM.jpg" Margin="317,0,106,153" Visibility="Hidden" />
+            <Image x:Name="_1853_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1853_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+            <Image x:Name="_1860_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1860_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+            <Image x:Name="_1882_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1882_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+            <Image x:Name="_1913_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1913_CM.jpg" Margin="317,0,106,153"    Visibility="Hidden" />
+        <Image x:Name="_1918_CM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1918_CM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1899_RM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1899_RM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1900_RM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1900_RM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1875_SM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1875_SM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
+        <Image x:Name="_1865_SM" Source="C:\Users\пк\source\repos\Stambul_DB\Stambul_DB\Res\Maps\1865_SM.jpg" Margin="317,0,106,153"  Visibility="Hidden"/>
     </Grid>
 </Window>
